--- a/tests/dev_server/jsenv_scripts/_jsenv_scripts.test.mjs/0_basic/.jsenv/chrome@145.00/main.html
+++ b/tests/dev_server/jsenv_scripts/_jsenv_scripts.test.mjs/0_basic/.jsenv/chrome@145.00/main.html
@@ -26,7 +26,7 @@
           "notificationsEnabled": true
         });
       </script>
-      <script type="module" src="/@fs@jsenv/core/node_modules/preact/debug/dist/debug.mjs" jsenv-injected-by="jsenv:preact"></script>
+      <script type="module" src="/@fs@jsenv/core/node_modules/preact/debug/dist/debug.mjs?v=11.0.0-beta.0" jsenv-injected-by="jsenv:preact"></script>
       <script src="/@fs@jsenv/core/packages/internal/plugin-supervisor/src/client/supervisor.js" jsenv-injected-by="jsenv:supervisor"></script>
       <script jsenv-injected-by="jsenv:supervisor" content-indented="">
         window.__supervisor__.setup({
