--- a/tests/dev_server/workspace_bundle/client/packages/bar/bar_main.html
+++ b/tests/dev_server/workspace_bundle/client/packages/bar/bar_main.html
@@ -9,10 +9,9 @@
   <body>
     <div id="app">INIT</div>
     <script type="module">
-      // eslint-disable-next-line import-x/no-unresolved
-      import { getAnswer } from "foo";
+      import { answerDouble } from "./bar_dep.js";
 
-      window.answer = getAnswer();
+      document.querySelector("#app").innerHTML = answerDouble;
     </script>
   </body>
 </html>
