--- a/tests/dev_server/workspace_bundle/client/main.html
+++ b/tests/dev_server/workspace_bundle/client/main.html
@@ -14,10 +14,6 @@
       });
     </script>
 
-    <script type="module">
-      import { getAnswer } from "foo";
-
-      window.resolveResultPromise(getAnswer());
-    </script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
