--- a/tests/dev_server/workspace_bundle/client/main.html
+++ b/tests/dev_server/workspace_bundle/client/main.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <div id="app">INIT</div>
+    <div id="app"></div>
     <script>
       window.resultPromise = new Promise((resolve) => {
         window.resolveResultPromise = resolve;
