--- a/tests/dev_server/workspace_bundle/_workspace_bundle.test.mjs/0_basic/.jsenv/chrome@145.00/main.html
+++ b/tests/dev_server/workspace_bundle/_workspace_bundle.test.mjs/0_basic/.jsenv/chrome@145.00/main.html
@@ -16,7 +16,7 @@
   
 
   
-    <div id="app">INIT</div>
+    <div id="app"></div>
     <script jsenv-cooked-by="jsenv:html_inline_content_analysis">
       window.resultPromise = new Promise((resolve) => {
         window.resolveResultPromise = resolve;
