Workon input search

--- a/packages/frontend/navi/src/field/demos/action/1_input_text_demo.html
+++ b/packages/frontend/navi/src/field/demos/action/1_input_text_demo.html
@@ -103,9 +103,8 @@
         color: #555;
         font-weight: 500;
       }
-      label input {
+      label .navi_input {
         margin-left: 5px;
-        padding: 8px 12px;
       }
     </style>
   </head>
